update readme for final submission